--- a/.gitignore
+++ b/.gitignore
@@ -127,3 +127,5 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+01_MLP_Thyroid_Classifier/data/mymodel.pth
+01_MLP_Thyroid_Classifier/data/thyroid_model.pth
