Added changes to mlp train script

--- a/.gitignore
+++ b/.gitignore
@@ -154,3 +154,6 @@ man/.DS_Store
 03_MLP_Regression/data/medical_insurance_valid_data_2022-07-22_14-54-22.csv
 03_MLP_Regression/data/medical_insurance_valid_data_2022-07-22_14-54-55.csv
 03_MLP_Regression/data/medical_insurance_valid_data_2022-07-22_14-55-54.csv
+03_MLP_Regression/charts/medical_insurance_loss_chart_2022-07-22_14-58-09.png
+03_MLP_Regression/charts/medical_insurancevalid_results_2022-07-22_14-58-09.png
+03_MLP_Regression/data/medical_insurance_valid_data_2022-07-22_14-58-09.csv
