--- a/.gitignore
+++ b/.gitignore
@@ -157,3 +157,6 @@ man/.DS_Store
 03_MLP_Regression/charts/medical_insurance_loss_chart_2022-07-22_14-58-09.png
 03_MLP_Regression/charts/medical_insurancevalid_results_2022-07-22_14-58-09.png
 03_MLP_Regression/data/medical_insurance_valid_data_2022-07-22_14-58-09.csv
+03_MLP_Regression/charts/medical_insurance_loss_chart_2022-07-26_10-48-00.png
+03_MLP_Regression/charts/medical_insurancevalid_results_2022-07-26_10-48-00.png
+03_MLP_Regression/data/medical_insurance_valid_data_2022-07-26_10-48-00.csv
