--- a/.gitignore
+++ b/.gitignore
@@ -160,3 +160,12 @@ man/.DS_Store
 03_MLP_Regression/charts/medical_insurance_loss_chart_2022-07-26_10-48-00.png
 03_MLP_Regression/charts/medical_insurancevalid_results_2022-07-26_10-48-00.png
 03_MLP_Regression/data/medical_insurance_valid_data_2022-07-26_10-48-00.csv
+03_MLP_Regression/charts/medical_insurance_loss_chart_2022-07-26_12-00-26.png
+03_MLP_Regression/charts/medical_insurance_loss_chart_2022-07-26_14-58-59.png
+03_MLP_Regression/charts/medical_insurancevalid_results_2022-07-26_12-00-26.png
+03_MLP_Regression/charts/medical_insurancevalid_results_2022-07-26_14-58-59.png
+03_MLP_Regression/data/medical_insurance_valid_data_2022-07-26_12-00-26.csv
+03_MLP_Regression/data/medical_insurance_valid_data_2022-07-26_14-58-59.csv
+03_MLP_Regression/charts/medical_insurance_loss_chart_2022-07-26_15-12-44.png
+03_MLP_Regression/charts/medical_insurancevalid_results_2022-07-26_15-12-44.png
+03_MLP_Regression/data/medical_insurance_valid_data_2022-07-26_15-12-44.csv
