Add infer and train changes

--- a/.gitignore
+++ b/.gitignore
@@ -169,3 +169,6 @@ man/.DS_Store
 03_MLP_Regression/charts/medical_insurance_loss_chart_2022-07-26_15-12-44.png
 03_MLP_Regression/charts/medical_insurancevalid_results_2022-07-26_15-12-44.png
 03_MLP_Regression/data/medical_insurance_valid_data_2022-07-26_15-12-44.csv
+03_MLP_Regression/charts/medical_insurance_loss_chart_2022-08-04_15-56-50.png
+03_MLP_Regression/charts/medical_insurancevalid_results_2022-08-04_15-56-50.png
+03_MLP_Regression/data/medical_insurance_valid_data_2022-08-04_15-56-50.csv
