--- a/.gitignore
+++ b/.gitignore
@@ -172,3 +172,43 @@ man/.DS_Store
 03_MLP_Regression/charts/medical_insurance_loss_chart_2022-08-04_15-56-50.png
 03_MLP_Regression/charts/medical_insurancevalid_results_2022-08-04_15-56-50.png
 03_MLP_Regression/data/medical_insurance_valid_data_2022-08-04_15-56-50.csv
+02_MLP_Regression/charts/medical_insurance_loss_chart_2022-07-22_14-44-53.png
+02_MLP_Regression/charts/medical_insurance_loss_chart_2022-07-22_14-45-35.png
+02_MLP_Regression/charts/medical_insurance_loss_chart_2022-07-22_14-46-56.png
+02_MLP_Regression/charts/medical_insurance_loss_chart_2022-07-22_14-54-22.png
+02_MLP_Regression/charts/medical_insurance_loss_chart_2022-07-22_14-54-55.png
+02_MLP_Regression/charts/medical_insurance_loss_chart_2022-07-22_14-55-54.png
+02_MLP_Regression/charts/medical_insurance_loss_chart_2022-07-22_14-58-09.png
+02_MLP_Regression/charts/medical_insurance_loss_chart_2022-07-25_12-49-37.png
+02_MLP_Regression/charts/medical_insurance_loss_chart_2022-07-26_10-48-00.png
+02_MLP_Regression/charts/medical_insurance_loss_chart_2022-07-26_12-00-26.png
+02_MLP_Regression/charts/medical_insurance_loss_chart_2022-07-26_14-58-59.png
+02_MLP_Regression/charts/medical_insurance_loss_chart_2022-07-26_15-12-44.png
+02_MLP_Regression/charts/medical_insurance_loss_chart_2022-08-04_15-56-50.png
+02_MLP_Regression/charts/medical_insurancevalid_results_2022-07-22_14-44-53.png
+02_MLP_Regression/charts/medical_insurancevalid_results_2022-07-22_14-45-35.png
+02_MLP_Regression/charts/medical_insurancevalid_results_2022-07-22_14-46-56.png
+02_MLP_Regression/charts/medical_insurancevalid_results_2022-07-22_14-54-22.png
+02_MLP_Regression/charts/medical_insurancevalid_results_2022-07-22_14-54-55.png
+02_MLP_Regression/charts/medical_insurancevalid_results_2022-07-22_14-55-54.png
+02_MLP_Regression/charts/medical_insurancevalid_results_2022-07-22_14-58-09.png
+02_MLP_Regression/charts/medical_insurancevalid_results_2022-07-25_12-49-37.png
+02_MLP_Regression/charts/medical_insurancevalid_results_2022-07-26_10-48-00.png
+02_MLP_Regression/charts/medical_insurancevalid_results_2022-07-26_12-00-26.png
+02_MLP_Regression/charts/medical_insurancevalid_results_2022-07-26_14-58-59.png
+02_MLP_Regression/charts/medical_insurancevalid_results_2022-07-26_15-12-44.png
+02_MLP_Regression/charts/medical_insurancevalid_results_2022-08-04_15-56-50.png
+02_MLP_Regression/data/medical_insurance_valid_data_2022-07-22_14-44-53.csv
+02_MLP_Regression/data/medical_insurance_valid_data_2022-07-22_14-45-35.csv
+02_MLP_Regression/data/medical_insurance_valid_data_2022-07-22_14-46-56.csv
+02_MLP_Regression/data/medical_insurance_valid_data_2022-07-22_14-54-22.csv
+02_MLP_Regression/data/medical_insurance_valid_data_2022-07-22_14-54-55.csv
+02_MLP_Regression/data/medical_insurance_valid_data_2022-07-22_14-55-54.csv
+02_MLP_Regression/data/medical_insurance_valid_data_2022-07-22_14-58-09.csv
+02_MLP_Regression/data/medical_insurance_valid_data_2022-07-25_12-49-37.csv
+02_MLP_Regression/data/medical_insurance_valid_data_2022-07-26_10-48-00.csv
+02_MLP_Regression/data/medical_insurance_valid_data_2022-07-26_12-00-26.csv
+02_MLP_Regression/data/medical_insurance_valid_data_2022-07-26_14-58-59.csv
+02_MLP_Regression/data/medical_insurance_valid_data_2022-07-26_15-12-44.csv
+02_MLP_Regression/data/medical_insurance_valid_data_2022-08-04_15-56-50.csv
+02_MLP_Regression/model_artifacts/medical_insurance_400.pt
