Changed and added VIT

--- a/.gitignore
+++ b/.gitignore
@@ -212,3 +212,21 @@ man/.DS_Store
 02_MLP_Regression/data/medical_insurance_valid_data_2022-07-26_15-12-44.csv
 02_MLP_Regression/data/medical_insurance_valid_data_2022-08-04_15-56-50.csv
 02_MLP_Regression/model_artifacts/medical_insurance_400.pt
+WIP/VIT_from_scratch/C:/Pytorch/Spyder/CIFAR10_data/cifar-10-python.tar.gz
+WIP/VIT_from_scratch/C:/Pytorch/Spyder/CIFAR10_data/cifar-10-batches-py/batches.meta
+WIP/VIT_from_scratch/C:/Pytorch/Spyder/CIFAR10_data/cifar-10-batches-py/data_batch_1
+WIP/VIT_from_scratch/C:/Pytorch/Spyder/CIFAR10_data/cifar-10-batches-py/data_batch_2
+WIP/VIT_from_scratch/C:/Pytorch/Spyder/CIFAR10_data/cifar-10-batches-py/data_batch_3
+WIP/VIT_from_scratch/C:/Pytorch/Spyder/CIFAR10_data/cifar-10-batches-py/data_batch_4
+WIP/VIT_from_scratch/C:/Pytorch/Spyder/CIFAR10_data/cifar-10-batches-py/data_batch_5
+WIP/VIT_from_scratch/C:/Pytorch/Spyder/CIFAR10_data/cifar-10-batches-py/readme.html
+WIP/VIT_from_scratch/C:/Pytorch/Spyder/CIFAR10_data/cifar-10-batches-py/test_batch
+WIP/VIT_from_scratch/C:/Pytorch/Spyder/CIFAR10_data/cifar-10-python.tar.gz
+WIP/VIT_from_scratch/C:/Pytorch/Spyder/CIFAR10_data/cifar-10-batches-py/batches.meta
+WIP/VIT_from_scratch/C:/Pytorch/Spyder/CIFAR10_data/cifar-10-batches-py/data_batch_1
+WIP/VIT_from_scratch/C:/Pytorch/Spyder/CIFAR10_data/cifar-10-batches-py/data_batch_2
+WIP/VIT_from_scratch/C:/Pytorch/Spyder/CIFAR10_data/cifar-10-batches-py/data_batch_3
+WIP/VIT_from_scratch/C:/Pytorch/Spyder/CIFAR10_data/cifar-10-batches-py/data_batch_4
+WIP/VIT_from_scratch/C:/Pytorch/Spyder/CIFAR10_data/cifar-10-batches-py/data_batch_5
+WIP/VIT_from_scratch/C:/Pytorch/Spyder/CIFAR10_data/cifar-10-batches-py/readme.html
+WIP/VIT_from_scratch/C:/Pytorch/Spyder/CIFAR10_data/cifar-10-batches-py/test_batch
