Added new training scripts

--- a/.gitignore
+++ b/.gitignore
@@ -230,3 +230,5 @@ WIP/VIT_from_scratch/C:/Pytorch/Spyder/CIFAR10_data/cifar-10-batches-py/data_bat
 WIP/VIT_from_scratch/C:/Pytorch/Spyder/CIFAR10_data/cifar-10-batches-py/data_batch_5
 WIP/VIT_from_scratch/C:/Pytorch/Spyder/CIFAR10_data/cifar-10-batches-py/readme.html
 WIP/VIT_from_scratch/C:/Pytorch/Spyder/CIFAR10_data/cifar-10-batches-py/test_batch
+WIP/VIT_from_scratch/images/
+WIP/VIT_from_scratch/archive/cat1.jpeg
