Added ignore images folder to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -135,100 +135,13 @@ dmypy.json
 
 man/.DS_Store
 .DS_Store
-03_MLP_Regression/charts/medical_insurance_loss_chart_2022-07-22_14-44-53.png
-03_MLP_Regression/charts/medical_insurance_loss_chart_2022-07-22_14-45-35.png
-03_MLP_Regression/charts/medical_insurance_loss_chart_2022-07-22_14-46-56.png
-03_MLP_Regression/charts/medical_insurancevalid_results_2022-07-22_14-44-53.png
-03_MLP_Regression/charts/medical_insurancevalid_results_2022-07-22_14-45-35.png
-03_MLP_Regression/charts/medical_insurancevalid_results_2022-07-22_14-46-56.png
-03_MLP_Regression/data/medical_insurance_valid_data_2022-07-22_14-44-53.csv
-03_MLP_Regression/data/medical_insurance_valid_data_2022-07-22_14-45-35.csv
-03_MLP_Regression/data/medical_insurance_valid_data_2022-07-22_14-46-56.csv
-03_MLP_Regression/model_artifacts/medical_insurance_400.pt
-03_MLP_Regression/charts/medical_insurance_loss_chart_2022-07-22_14-54-22.png
-03_MLP_Regression/charts/medical_insurance_loss_chart_2022-07-22_14-54-55.png
-03_MLP_Regression/charts/medical_insurance_loss_chart_2022-07-22_14-55-54.png
-03_MLP_Regression/charts/medical_insurancevalid_results_2022-07-22_14-54-22.png
-03_MLP_Regression/charts/medical_insurancevalid_results_2022-07-22_14-54-55.png
-03_MLP_Regression/charts/medical_insurancevalid_results_2022-07-22_14-55-54.png
-03_MLP_Regression/data/medical_insurance_valid_data_2022-07-22_14-54-22.csv
-03_MLP_Regression/data/medical_insurance_valid_data_2022-07-22_14-54-55.csv
-03_MLP_Regression/data/medical_insurance_valid_data_2022-07-22_14-55-54.csv
-03_MLP_Regression/charts/medical_insurance_loss_chart_2022-07-22_14-58-09.png
-03_MLP_Regression/charts/medical_insurancevalid_results_2022-07-22_14-58-09.png
-03_MLP_Regression/data/medical_insurance_valid_data_2022-07-22_14-58-09.csv
-03_MLP_Regression/charts/medical_insurance_loss_chart_2022-07-26_10-48-00.png
-03_MLP_Regression/charts/medical_insurancevalid_results_2022-07-26_10-48-00.png
-03_MLP_Regression/data/medical_insurance_valid_data_2022-07-26_10-48-00.csv
-03_MLP_Regression/charts/medical_insurance_loss_chart_2022-07-26_12-00-26.png
-03_MLP_Regression/charts/medical_insurance_loss_chart_2022-07-26_14-58-59.png
-03_MLP_Regression/charts/medical_insurancevalid_results_2022-07-26_12-00-26.png
-03_MLP_Regression/charts/medical_insurancevalid_results_2022-07-26_14-58-59.png
-03_MLP_Regression/data/medical_insurance_valid_data_2022-07-26_12-00-26.csv
-03_MLP_Regression/data/medical_insurance_valid_data_2022-07-26_14-58-59.csv
-03_MLP_Regression/charts/medical_insurance_loss_chart_2022-07-26_15-12-44.png
-03_MLP_Regression/charts/medical_insurancevalid_results_2022-07-26_15-12-44.png
-03_MLP_Regression/data/medical_insurance_valid_data_2022-07-26_15-12-44.csv
-03_MLP_Regression/charts/medical_insurance_loss_chart_2022-08-04_15-56-50.png
-03_MLP_Regression/charts/medical_insurancevalid_results_2022-08-04_15-56-50.png
-03_MLP_Regression/data/medical_insurance_valid_data_2022-08-04_15-56-50.csv
-02_MLP_Regression/charts/medical_insurance_loss_chart_2022-07-22_14-44-53.png
-02_MLP_Regression/charts/medical_insurance_loss_chart_2022-07-22_14-45-35.png
-02_MLP_Regression/charts/medical_insurance_loss_chart_2022-07-22_14-46-56.png
-02_MLP_Regression/charts/medical_insurance_loss_chart_2022-07-22_14-54-22.png
-02_MLP_Regression/charts/medical_insurance_loss_chart_2022-07-22_14-54-55.png
-02_MLP_Regression/charts/medical_insurance_loss_chart_2022-07-22_14-55-54.png
-02_MLP_Regression/charts/medical_insurance_loss_chart_2022-07-22_14-58-09.png
-02_MLP_Regression/charts/medical_insurance_loss_chart_2022-07-25_12-49-37.png
-02_MLP_Regression/charts/medical_insurance_loss_chart_2022-07-26_10-48-00.png
-02_MLP_Regression/charts/medical_insurance_loss_chart_2022-07-26_12-00-26.png
-02_MLP_Regression/charts/medical_insurance_loss_chart_2022-07-26_14-58-59.png
-02_MLP_Regression/charts/medical_insurance_loss_chart_2022-07-26_15-12-44.png
-02_MLP_Regression/charts/medical_insurance_loss_chart_2022-08-04_15-56-50.png
-02_MLP_Regression/charts/medical_insurancevalid_results_2022-07-22_14-44-53.png
-02_MLP_Regression/charts/medical_insurancevalid_results_2022-07-22_14-45-35.png
-02_MLP_Regression/charts/medical_insurancevalid_results_2022-07-22_14-46-56.png
-02_MLP_Regression/charts/medical_insurancevalid_results_2022-07-22_14-54-22.png
-02_MLP_Regression/charts/medical_insurancevalid_results_2022-07-22_14-54-55.png
-02_MLP_Regression/charts/medical_insurancevalid_results_2022-07-22_14-55-54.png
-02_MLP_Regression/charts/medical_insurancevalid_results_2022-07-22_14-58-09.png
-02_MLP_Regression/charts/medical_insurancevalid_results_2022-07-25_12-49-37.png
-02_MLP_Regression/charts/medical_insurancevalid_results_2022-07-26_10-48-00.png
-02_MLP_Regression/charts/medical_insurancevalid_results_2022-07-26_12-00-26.png
-02_MLP_Regression/charts/medical_insurancevalid_results_2022-07-26_14-58-59.png
-02_MLP_Regression/charts/medical_insurancevalid_results_2022-07-26_15-12-44.png
-02_MLP_Regression/charts/medical_insurancevalid_results_2022-08-04_15-56-50.png
-02_MLP_Regression/data/medical_insurance_valid_data_2022-07-22_14-44-53.csv
-02_MLP_Regression/data/medical_insurance_valid_data_2022-07-22_14-45-35.csv
-02_MLP_Regression/data/medical_insurance_valid_data_2022-07-22_14-46-56.csv
-02_MLP_Regression/data/medical_insurance_valid_data_2022-07-22_14-54-22.csv
-02_MLP_Regression/data/medical_insurance_valid_data_2022-07-22_14-54-55.csv
-02_MLP_Regression/data/medical_insurance_valid_data_2022-07-22_14-55-54.csv
-02_MLP_Regression/data/medical_insurance_valid_data_2022-07-22_14-58-09.csv
-02_MLP_Regression/data/medical_insurance_valid_data_2022-07-25_12-49-37.csv
-02_MLP_Regression/data/medical_insurance_valid_data_2022-07-26_10-48-00.csv
-02_MLP_Regression/data/medical_insurance_valid_data_2022-07-26_12-00-26.csv
-02_MLP_Regression/data/medical_insurance_valid_data_2022-07-26_14-58-59.csv
-02_MLP_Regression/data/medical_insurance_valid_data_2022-07-26_15-12-44.csv
-02_MLP_Regression/data/medical_insurance_valid_data_2022-08-04_15-56-50.csv
+
+# Ignore certain folders in our directories
+02_MLP_Regression/charts/
+02_MLP_Regression/data/
+
 02_MLP_Regression/model_artifacts/medical_insurance_400.pt
-WIP/VIT_from_scratch/C:/Pytorch/Spyder/CIFAR10_data/cifar-10-python.tar.gz
-WIP/VIT_from_scratch/C:/Pytorch/Spyder/CIFAR10_data/cifar-10-batches-py/batches.meta
-WIP/VIT_from_scratch/C:/Pytorch/Spyder/CIFAR10_data/cifar-10-batches-py/data_batch_1
-WIP/VIT_from_scratch/C:/Pytorch/Spyder/CIFAR10_data/cifar-10-batches-py/data_batch_2
-WIP/VIT_from_scratch/C:/Pytorch/Spyder/CIFAR10_data/cifar-10-batches-py/data_batch_3
-WIP/VIT_from_scratch/C:/Pytorch/Spyder/CIFAR10_data/cifar-10-batches-py/data_batch_4
-WIP/VIT_from_scratch/C:/Pytorch/Spyder/CIFAR10_data/cifar-10-batches-py/data_batch_5
-WIP/VIT_from_scratch/C:/Pytorch/Spyder/CIFAR10_data/cifar-10-batches-py/readme.html
-WIP/VIT_from_scratch/C:/Pytorch/Spyder/CIFAR10_data/cifar-10-batches-py/test_batch
-WIP/VIT_from_scratch/C:/Pytorch/Spyder/CIFAR10_data/cifar-10-python.tar.gz
-WIP/VIT_from_scratch/C:/Pytorch/Spyder/CIFAR10_data/cifar-10-batches-py/batches.meta
-WIP/VIT_from_scratch/C:/Pytorch/Spyder/CIFAR10_data/cifar-10-batches-py/data_batch_1
-WIP/VIT_from_scratch/C:/Pytorch/Spyder/CIFAR10_data/cifar-10-batches-py/data_batch_2
-WIP/VIT_from_scratch/C:/Pytorch/Spyder/CIFAR10_data/cifar-10-batches-py/data_batch_3
-WIP/VIT_from_scratch/C:/Pytorch/Spyder/CIFAR10_data/cifar-10-batches-py/data_batch_4
-WIP/VIT_from_scratch/C:/Pytorch/Spyder/CIFAR10_data/cifar-10-batches-py/data_batch_5
-WIP/VIT_from_scratch/C:/Pytorch/Spyder/CIFAR10_data/cifar-10-batches-py/readme.html
-WIP/VIT_from_scratch/C:/Pytorch/Spyder/CIFAR10_data/cifar-10-batches-py/test_batch
+WIP/VIT_from_scratch/C:/Pytorch/Spyder/CIFAR10_data/
 WIP/VIT_from_scratch/images/
-WIP/VIT_from_scratch/archive/cat1.jpeg
+WIP/VIT_from_scratch/archive/
+03_CV_Transfer_Learning/images/
