Added changes to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -145,3 +145,4 @@ WIP/VIT_from_scratch/C:/Pytorch/Spyder/CIFAR10_data/
 WIP/VIT_from_scratch/images/
 WIP/VIT_from_scratch/archive/
 03_CV_Transfer_Learning/images/
+03_CV_Transfer_Learning/dataset/
